--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  font-family: 'ubuntu', serif;
 }
 
 /*
@@ -244,4 +245,5 @@ textarea {
     page-break-after: avoid;
   }
 }
+
 
