--- a/css/style.css
+++ b/css/style.css
@@ -91,10 +91,11 @@ fieldset {
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px){
   .blog-entry {
     grid-template-columns: 1fr 1fr; /* 2 columns */
-    grid-template-rows: auto;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas: 
       "blog1 blog1"
-      "blog2 blog3"
+      "blog2 blog3";
+    width: 100%;
   }
 
   .blog-item:first-child{
