Update footer backgroud color to the correct one

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 .site-footer {
-    background-color: #222;
+    background-color: #0E2E4E;
     color: white;
     padding: 40px 20px;
     font-family: 'Ubuntu', sans-serif;
