--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,53 @@ fieldset {
   width: 100%;
 }
 
+.blog-item{
+  position: relative;
+}
+.blog-date{
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: center;
+  background-color: #D8605F;
+  color: white;
+  width: 50px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.blog-date-day{
+  font-size:16px;
+}
+.blog-date-month-year{
+  font-size: 8px;
+}
+
+.blog-item-caption-container{
+  font-size: 16px;
+  color: white;
+  position: absolute;
+  bottom: 0;
+  background-color: #19B2DE;
+  width: 100%;
+  padding-left: 5px;
+  padding-bottom: 5px;
+}
+.blog-item-caption-header{
+  padding-left: 8px;
+}
+.blog-item-caption-subheader{
+  font-size: 11px;
+  padding-left: 8px;
+}
+.blog-item-caption-square{
+  height: 25px;
+  width: 25px;
+  background-color: #1596BD;
+  position: absolute;
+  right: 8px;
+  bottom: 8px;
+}
+
 /* gallery*/
 
 .gallery-title{
@@ -137,6 +184,7 @@ fieldset {
       "blog2 blog3";
     width: auto;
   }
+
   .blog-item:first-child{
     grid-area: blog1;
   }
