--- a/css/style.css
+++ b/css/style.css
@@ -97,23 +97,22 @@ fieldset {
   bottom: 0;
   background-color: #19B2DE;
   width: 100%;
-  padding-left: 5px;
   padding-bottom: 5px;
 }
 .blog-item-caption-header{
-  padding-left: 8px;
+  padding-left: 15px;
 }
 .blog-item-caption-subheader{
   font-size: 11px;
-  padding-left: 8px;
+  padding-left: 15px;
 }
 .blog-item-caption-square{
   height: 25px;
   width: 25px;
   background-color: #1596BD;
   position: absolute;
-  right: 8px;
-  bottom: 8px;
+  right: 15px;
+  bottom: 10px;
 }
 
 /* gallery*/
@@ -140,15 +139,63 @@ fieldset {
   grid-gap: 16px;
   padding: 28px 16px 0 16px;
 }
+.gallery-image-container{
+  position: relative;
+}
 
-.gallery-image, .gallery-image-container{
+.gallery-image{
   width: 100%;
   height: auto;
+  display: block;
 }
 
 .gallery-image-overlay{
-  position: relative;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #19B2DE;
+  opacity: 0%;
+  transition: 0.8 ease-in;
 }
+
+.gallery-image-container:hover .gallery-image-overlay{
+  opacity: 83%; 
+}
+.gallery-image-container:active .gallery-image-overlay{
+  opacity: 83%;
+}
+
+.overlay-caption-container{
+  color: white;
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 5px;
+  width: 100%;
+}
+
+.overlay-caption-header{
+  font-size: 16px;
+  padding-left: 15px;
+}
+.overlay-caption-subheader{
+  font-size: 11px;
+  padding-left: 15px;
+}
+.overlay-caption-square{
+  height: 25px;
+  width: 25px;
+  background-color: #1596BD;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin-right: 15px;
+  margin-bottom: 10px;
+}
+
 
 /* clients */
 .clients{
@@ -183,7 +230,7 @@ fieldset {
 @media screen and (min-width: 632px){
   .blog-entry {
     grid-template-columns: 1fr 1fr; /* 2 columns */
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto;
     grid-template-areas: 
       "blog1 blog1"
       "blog2 blog3";
@@ -199,6 +246,8 @@ fieldset {
   .blog-item:nth-child(3){
     grid-area: blog3;
   }
+  
+
   .gallery-grid {
     grid-template-columns: repeat(2, 1fr); 
   }
