--- a/css/header.css
+++ b/css/header.css
@@ -204,8 +204,14 @@ html, body {
        flex-direction: column;
        align-items: center;
     }
+  
     .web-text h3 {
       text-align: center;
+    }
+    .websolutions-image-paragraph {
+        padding: 10px;
+        line-height: 18px;
+        
     }
 }
 
