--- a/css/footer.css
+++ b/css/footer.css
@@ -6,17 +6,21 @@
   width: 100%;
 }
 
+.profile {
+  text-align: center;
+  width: 100%;
+  position: relative;
+  z-index: 10;
+}
+
 .footer-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
   margin: 0;
-}
-
-.profile {
-  text-align: center;
-  width: 100%;
+  position: relative;
+  z-index: 1;
 }
 
 .profile-image {
@@ -29,7 +33,7 @@
 }
 
 .profile-description {
-  text-align: center;
+  text-align: left;
   max-width: 600px;
   margin: 20px auto;
 }
